vbnc/vbnc/tests/Errors/30124-1.vb
Public Class SomeClass
    Public Property Prop As Integer
    End Property
End Class